[workspace]
resolver = "2"
members = ["capnp_conv", "capnp_conv_macros", "capnp_conv_tests", "example"]

[workspace.package]
authors = [
    "Aik Kalantarian <aik.kalantarian@gmail.com>",
    "Debanjan Basu <debanjanbasu2006@gmail.com>",
]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/aikalant/capnp_conv"
readme = "README.md"

[workspace.dependencies]
capnp_conv = { path = "capnp_conv", version = "0.3.1" }
capnp_conv_macros = { path = "capnp_conv_macros", version = "0.3.1" }

capnp = "0.21"
capnpc = "0.21"
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
